--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "sanitize-html": "^2.14.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
